--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "react-scripts": "^1.0.7",
-    "react-test-renderer": "^15.5.4",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^1.16.2"
+    "react-test-renderer": "^16.0.0",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
@@ -18,11 +18,11 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
-    "enzyme": "^2.7.0",
-    "expect": "^1.20.2",
-    "react": "^15.5.4",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.5.4",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "expect": "^21.2.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "sinon": "^1.17.7"
   },
   "scripts": {
