--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
+    "mocha-multi": "^1.0.0",
     "react-scripts": "^1.0.7",
     "react-test-renderer": "^16.0.0",
     "webpack": "^3.6.0",
@@ -15,12 +17,14 @@
     "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.1.1",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^1.0.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^3.5.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "expect": "^21.2.1",
+    "mocha-multi": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "sinon": "^1.17.7"
