--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "react-scripts": "^1.0.7",
@@ -14,13 +15,16 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.1.1",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^3.5.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "expect": "^21.2.1",
+    "mocha-multi": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "sinon": "^1.17.7"
